// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Step /> should ask for ope and licenciement eco 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 2em;
  padding: 0;
  font-size: 1.15rem;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 1.25rem;
}

.c2 {
  display: block;
  margin-top: 1.25rem;
  margin-bottom: 0.625rem;
  font-size: 1.25rem;
}

.c1 {
  width: 100%;
}

<div>
  <h3>
    Chimie
  </h3>
  <p>
    Quel est votre échelon dans la convention collective ?
    <br />
    Vous pouvez le trouver sur votre bulletin de salaire
  </p>
  <label
    class="c0"
    for="echelon"
  >
    Sélectionnez un échelon
  </label>
  <select
    class="c1"
    id="echelon"
    name="echelon"
  >
    <option
      disabled=""
      value=""
    />
    <option
      value="130"
    >
      130
    </option>
    <option
      value="140"
    >
      140
    </option>
    <option
      value="150"
    >
      150
    </option>
    <option
      value="160"
    >
      160
    </option>
    <option
      value="175"
    >
      175
    </option>
    <option
      value="190"
    >
      190
    </option>
    <option
      value="205"
    >
      205
    </option>
    <option
      value="225"
    >
      225
    </option>
    <option
      value="235"
    >
      235
    </option>
    <option
      value="250"
    >
      250
    </option>
    <option
      value="275"
    >
      275
    </option>
    <option
      value="300"
    >
      300
    </option>
    <option
      value="325"
    >
      325
    </option>
    <option
      value="350"
    >
      350
    </option>
    <option
      value="360"
    >
      360
    </option>
    <option
      value="400"
    >
      400
    </option>
    <option
      value="460"
    >
      460
    </option>
    <option
      value="480"
    >
      480
    </option>
    <option
      value="510"
    >
      510
    </option>
    <option
      value="550"
    >
      550
    </option>
    <option
      value="660"
    >
      660
    </option>
    <option
      value="770"
    >
      770
    </option>
    <option
      value="880"
    >
      880
    </option>
  </select>
  <p
    class="c2"
  >
    Est ce que votre entreprise est affiliée à une des organisations patronales employeur ?
  </p>
  <div
    class="c3"
  >
    <label
      class="c0"
    >
      <input
        name="hasOpe"
        type="radio"
        value="true"
      />
      <span>
        Oui
      </span>
    </label>
    <label
      class="c0"
    >
      <input
        name="hasOpe"
        type="radio"
        value="false"
      />
      <span>
        Non
      </span>
    </label>
  </div>
  <p
    class="c2"
  >
    Le motif de votre licenciement est-il économique ?
  </p>
  <div
    class="c3"
  >
    <label
      class="c0"
    >
      <input
        name="isEco"
        type="radio"
        value="true"
      />
      <span>
        Oui
      </span>
    </label>
    <label
      class="c0"
    >
      <input
        name="isEco"
        type="radio"
        value="false"
      />
      <span>
        Non
      </span>
    </label>
  </div>
</div>
`;

exports[`<Step /> should ask for ope and licenciement eco and age 1`] = `
.c6 {
  width: auto;
  padding: 0.625rem 0.25rem;
  font-size: 1rem;
  line-height: inherit;
  text-align: right;
  border: 1px solid #c9d3df;
  border-color: #c9d3df;
  border-radius: 0.25rem;
}

.c6::-webkit-outer-spin-button,
.c6::-webkit-inner-spin-button {
  margin: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 2em;
  padding: 0;
  font-size: 1.15rem;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 1.25rem;
}

.c4 {
  display: block;
  margin-top: 1.25rem;
  margin-bottom: 0.625rem;
  font-size: 1.25rem;
}

.c2 {
  display: block;
  margin-top: 1.25rem;
  margin-bottom: 0.625rem;
  font-size: 1.25rem;
}

.c1 {
  width: 100%;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 1.25rem;
}

<div>
  <h3>
    Chimie
  </h3>
  <p>
    Quel est votre échelon dans la convention collective ?
    <br />
    Vous pouvez le trouver sur votre bulletin de salaire
  </p>
  <label
    class="c0"
    for="echelon"
  >
    Sélectionnez un échelon
  </label>
  <select
    class="c1"
    id="echelon"
    name="echelon"
  >
    <option
      disabled=""
      value=""
    />
    <option
      value="130"
    >
      130
    </option>
    <option
      value="140"
    >
      140
    </option>
    <option
      value="150"
    >
      150
    </option>
    <option
      value="160"
    >
      160
    </option>
    <option
      value="175"
    >
      175
    </option>
    <option
      value="190"
    >
      190
    </option>
    <option
      value="205"
    >
      205
    </option>
    <option
      value="225"
    >
      225
    </option>
    <option
      value="235"
    >
      235
    </option>
    <option
      value="250"
    >
      250
    </option>
    <option
      value="275"
    >
      275
    </option>
    <option
      value="300"
    >
      300
    </option>
    <option
      value="325"
    >
      325
    </option>
    <option
      value="350"
    >
      350
    </option>
    <option
      value="360"
    >
      360
    </option>
    <option
      value="400"
    >
      400
    </option>
    <option
      value="460"
    >
      460
    </option>
    <option
      value="480"
    >
      480
    </option>
    <option
      value="510"
    >
      510
    </option>
    <option
      value="550"
    >
      550
    </option>
    <option
      value="660"
    >
      660
    </option>
    <option
      value="770"
    >
      770
    </option>
    <option
      value="880"
    >
      880
    </option>
  </select>
  <p
    class="c2"
  >
    Est ce que votre entreprise est affiliée à une des organisations patronales employeur ?
  </p>
  <div
    class="c3"
  >
    <label
      class="c0"
    >
      <input
        name="hasOpe"
        type="radio"
        value="true"
      />
      <span>
        Oui
      </span>
    </label>
    <label
      class="c0"
    >
      <input
        name="hasOpe"
        type="radio"
        value="false"
      />
      <span>
        Non
      </span>
    </label>
  </div>
  <p
    class="c2"
  >
    Le motif de votre licenciement est-il économique ?
  </p>
  <div
    class="c3"
  >
    <label
      class="c0"
    >
      <input
        name="isEco"
        type="radio"
        value="true"
      />
      <span>
        Oui
      </span>
    </label>
    <label
      class="c0"
    >
      <input
        name="isEco"
        type="radio"
        value="false"
      />
      <span>
        Non
      </span>
    </label>
  </div>
  <label
    class="c4"
    for="1"
  >
    Quel etait votre âge à la date du licenciement ?
  </label>
  <div
    class="c5"
  >
    <input
      class="c6"
      id="1"
      name="age"
      type="number"
      value=""
    />
  </div>
</div>
`;

exports[`<Step /> should render 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 2em;
  padding: 0;
  font-size: 1.15rem;
}

.c1 {
  width: 100%;
}

<div>
  <h3>
    Chimie
  </h3>
  <p>
    Quel est votre échelon dans la convention collective ?
    <br />
    Vous pouvez le trouver sur votre bulletin de salaire
  </p>
  <label
    class="c0"
    for="echelon"
  >
    Sélectionnez un échelon
  </label>
  <select
    class="c1"
    id="echelon"
    name="echelon"
  >
    <option
      disabled=""
      value=""
    />
    <option
      value="130"
    >
      130
    </option>
    <option
      value="140"
    >
      140
    </option>
    <option
      value="150"
    >
      150
    </option>
    <option
      value="160"
    >
      160
    </option>
    <option
      value="175"
    >
      175
    </option>
    <option
      value="190"
    >
      190
    </option>
    <option
      value="205"
    >
      205
    </option>
    <option
      value="225"
    >
      225
    </option>
    <option
      value="235"
    >
      235
    </option>
    <option
      value="250"
    >
      250
    </option>
    <option
      value="275"
    >
      275
    </option>
    <option
      value="300"
    >
      300
    </option>
    <option
      value="325"
    >
      325
    </option>
    <option
      value="350"
    >
      350
    </option>
    <option
      value="360"
    >
      360
    </option>
    <option
      value="400"
    >
      400
    </option>
    <option
      value="460"
    >
      460
    </option>
    <option
      value="480"
    >
      480
    </option>
    <option
      value="510"
    >
      510
    </option>
    <option
      value="550"
    >
      550
    </option>
    <option
      value="660"
    >
      660
    </option>
    <option
      value="770"
    >
      770
    </option>
    <option
      value="880"
    >
      880
    </option>
  </select>
</div>
`;
